--- a/pimpinan/dashboard.html
+++ b/pimpinan/dashboard.html
@@ -61,22 +61,21 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-dokumen.html">Jenis Arsip</a></li>
+                                <li><a href="data-dokumen.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li>
                             </ul>
                         </li>
 
@@ -263,7 +262,7 @@
                                             <i class="mdi mdi-tag-text-outline"></i>
                                         </div>
                                         <div class="p-4">
-                                            <h6 class="text-uppercase mb-3">Disposisi</h6>
+                                            <h6 class="text-uppercase mb-3">Data Arsip</h6>
                                             <h4 class="mb-0">9<small class="ml-2"></small></h4>
                                         </div>
                                     </div>
