--- a/pimpinan/data-dokumen.html
+++ b/pimpinan/data-dokumen.html
@@ -58,22 +58,21 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-dokumen.html">Jenis Arsip</a></li>
+                                <li><a href="data-dokumen.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li>
                             </ul>
                         </li>
 
@@ -233,7 +232,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Data Dokumen</h4>
+                                    <h4 class="page-title">Data Arsip</h4>
                                 </div>
                             </div>
                         </div>
@@ -253,7 +252,7 @@
                                                     <tr>
                                                         <th>No</th>
                                                         <th>Nama</th>
-                                                        <th>Jenis dokumen</th>
+                                                        <th>Jenis arsip</th>
                                                         <th>File pdf/jpg</th>
                                                         <th>Aksi</th>
                                                       
