--- a/pimpinan/form-add-data-dokumen.html
+++ b/pimpinan/form-add-data-dokumen.html
@@ -236,12 +236,7 @@
                                 <div class="col-12">
                                     <div class="card m-b-30">
                                         <div class="card-body">
-                                            <div class="form-group row">
-                                                <label for="example-text-input" class="col-sm-2 col-form-label">No</label>
-                                                <div class="col-sm-5">
-                                                    <input class="form-control" type="text" value="" id="example-text-input">
-                                                </div>
-                                            </div>
+                                            
                                             <div class="form-group row">
                                                 <label for="example-date-input" class="col-sm-2 col-form-label">Nama</label>
                                                 <div class="col-sm-5">
@@ -267,7 +262,7 @@
                                             <div class="form-group row">
                                                 <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Upload</label>
                                                 <div class="col-sm-5">
-                                                    <input class="form-control" type="text" value="14 Oktober 2021" id="example-date-input">
+                                                    <input class="form-control" type="text" value="" id="example-date-input">
                                                 </div>
                                             </div>
 
