--- a/pimpinan/lihat-suratkeluar.html
+++ b/pimpinan/lihat-suratkeluar.html
@@ -231,7 +231,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Data Surat Keluar</h4>
+                                    <h4 class="page-title">Detail Surat Keluar</h4>
                                 </div>
                             </div>
                         </div>
