--- a/resepsionis/form-edit-jenis-arsip.html
+++ b/resepsionis/form-edit-jenis-arsip.html
@@ -232,7 +232,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Tambah Jenis Arsip</h4>
+                                    <h4 class="page-title">Edit Jenis Arsip</h4>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Nama/Jenis Arsip</label>
                                                 <div class="col-sm-5">
-                                                    <input class="form-control" type="text" value="" id="example-text-input">
+                                                    <input class="form-control" type="text" value="Akte Perusahaan" id="example-text-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
@@ -253,14 +253,14 @@
                                                                 <div class="input-group-append">
 
                                                                 <a href=jenis-arsip.html>
-                                                                    <button class="btn btn-primary btn-sm" type="button">Simpan</button></a>
+                                                                    <button class="btn btn-primary" type="button">Simpan</button></a>
                                                                 </div>
                                                                     
                                                                 </div> &nbsp &nbsp
                                                                 <div class="input-group-append">
 
                                                                 <a href=jenis-arsip.html>
-                                                                    <button class="btn btn-danger btn-sm" type="button">Batal</button></a>
+                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                                         </div>
