--- a/resepsionis/lihat-surat-keluar.html
+++ b/resepsionis/lihat-surat-keluar.html
@@ -254,7 +254,7 @@
                                                             col-form-label">No Surat</label>
                                                             <div class="col-sm-10">
                                                                 <label for="example-number-input"class="col-sm-2
-                                                            col-form-label">121</label>
+                                                            col-form-label">SR-121</label>
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
@@ -291,6 +291,19 @@
                                                             col-form-label">PKL.pdf</label></a>
                                                             </div>
                                                         </div>
+                                                        <div class="col-md-10 offset-md-2">
+                                                            <div class="input-group mt-2">
+                                                                <div class="custom">
+                                                                    <div class="input-group-append">
+
+                                                                        <a href=surat-keluar.html>
+                                                                            <button class="btn btn-danger btn-sm" type="button">Kembali</button></a>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+                                                            
+                                                            </div>
                                                     </div>
                                                 </div>
                                             </div> <!-- end col -->
